# text-highlighter

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  example.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: cicd.yaml
text_highlighter/: __init__.py
text_highlighter/frontend/: package-lock.json  package.json
text_highlighter/frontend/public/: bootstrap.min.css
text_highlighter/frontend/src/: TextHighlighter.tsx  index.tsx  style.css
